--- a/project/NeuralNetworksProject.ipynb
+++ b/project/NeuralNetworksProject.ipynb
@@ -1795,6 +1795,18 @@
         "clean_path = os.path.join(TEST_PATH, clean_image)\n",
         "show_test_model(clean_image=clean_path, noisy_image=noisy_path)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Add your image paths and run this block to test out your own! ###\n",
+        "clean_image_path = \"\"\n",
+        "noisy_image_path = \"\"\n",
+        "show_test_model(clean_image=clean_image_path, noisy_image=noisy_image_path)\n"
+      ]
     }
   ],
   "metadata": {
