add drive mounting to project

--- a/project/NeuralNetworksProject.ipynb
+++ b/project/NeuralNetworksProject.ipynb
@@ -40,6 +40,27 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Mount your drive (if running in Colaboratory)"
+      ],
+      "metadata": {
+        "id": "kR-v6o4Mn39n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "3ky-xNbyn7Fe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Defining paths to my training, validation, and test datasets\n",
         "## **Skip the following block if you are running to test my project**"
       ],
@@ -302,6 +323,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Define data transformation (just converting to tensor)"
+      ],
+      "metadata": {
+        "id": "-BEh3xtKmP3D"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
@@ -309,7 +339,6 @@
       },
       "outputs": [],
       "source": [
-        "# Define data transformation (just converting to tensor for now)\n",
         "data_transform = transforms.Compose([\n",
         "        transforms.ToTensor()\n",
         "    ])"
@@ -354,7 +383,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Load data into training, validation, and test sets"
+        "#### Load data into training, validation, and test sets\n",
+        "---\n",
+        "## **Skip the following block if you are running to test my project**"
       ],
       "metadata": {
         "id": "FMe4lfEmLcit"
